--- a/README
+++ b/README
@@ -1,10 +1,10 @@
-pivx-seeder
+posq-seeder
 ==============
 
 This software is forked from bitcoin-seeder and modified for PIVX network.
 
 Original version resides at https://github.com/sipa/bitcoin-seeder
-PIVX version resides at https://github.com/Warrows/pivx-seeder
+PIVX version resides at https://github.com/Warrows/posq-seeder
 
 PIVX-seeder is a crawler for the Bitcoin network, which exposes a list
 of reliable nodes via a built-in DNS server.
